--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,30 @@
-version: 2
+version: 2.1
+
+orbs:
+  win: circleci/windows@1.0.0
+
 jobs:
   build:
-    working_directory: ~/my-project
-    docker:
-      - image: circleci/node:10-browsers
+    executor:
+      name: win/vs2019
+      shell: powershell.exe
     steps:
       - checkout
       - restore_cache:
-          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
-      - run: npm install
+          keys:
+            - dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
+      - run:
+          name: 'Install project dependencies'
+          command: dotnet.exe restore
       - save_cache:
-          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
-            - 'node_modules'
-      - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-      - run: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+            - C:\Users\circleci\.nuget\packages
+          key: dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
+      - run:
+          name: 'Run Build step'
+          command: dotnet.exe publish -c Release -r win10-x64
+      - run:
+          name: 'Test the executable'
+          command: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
+      - store_artifacts:
+          path: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
