--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,17 @@
-version: 2.1
-
-orbs:
-  win: circleci/windows@1.0.0
-
+version: 2
 jobs:
   build:
-    executor:
-      name: win/vs2019
-      shell: powershell.exe
+    working_directory: ~/my-project
+    docker:
+      - image: circleci/node:10-browsers
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
-      - run:
-          name: 'Install project dependencies'
-          command: dotnet.exe restore
+          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
+      - run: npm install
       - save_cache:
+          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
-            - C:\Users\circleci\.nuget\packages
-          key: dotnet-packages-v1-{{ checksum "circleci-demo-windows.csproj" }}
-      - run:
-          name: 'Run Build step'
-          command: dotnet.exe publish -c Release -r win10-x64
-      - run:
-          name: 'Test the executable'
-          command: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
-      - store_artifacts:
-          path: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
+            - 'node_modules'
+      - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+      - run: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
