--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "ng test --source-map=false",
+        "test": "ng test",
         "e2e": "ng e2e",
         "format:fix": "pretty-quick --staged",
         "lint": "ng lint",
