"ui/ui/e2e tests, layout"

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
+app/**/*.js
+app/**/*.js.map
 
 # dependencies
 /node_modules
+/bower_components
 
 # profiling files
 chrome-profiler-events*.json
@@ -45,5 +48,4 @@ testem.log
 .DS_Store
 Thumbs.db
 
-#
-debug.log
+
