--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "printWidth": 120,
     "singleQuote": true,
+    "trailingComma": "none",
     "useTabs": false,
     "tabWidth": 2,
     "semi": true,
