--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "8.2.13",
     "@angular/platform-browser-dynamic": "8.2.13",
     "@angular/router": "8.2.13",
+    "@nicky-lenaers/ngx-scroll-to": "3.0.1",
     "angular-svg-round-progressbar": "3.0.1",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
