--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "8.2.13",
     "@nicky-lenaers/ngx-scroll-to": "3.0.1",
     "angular-svg-round-progressbar": "3.0.1",
+    "ngx-webstorage-service": "4.1.0",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
