--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "prettier": "1.18.2",
     "pretty-quick": "2.0.0",
     "protractor": "5.4.0",
+    "rxjs-tslint-rules": "4.28.1",
     "ts-node": "7.0.0",
     "tslint": "5.15.0",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "3.5.3"
   }
 }
